--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -92,9 +92,9 @@ span.img_container {
     -webkit-user-select: none;
 }
 
-span.img_container.failed {
-    overflow: hidden;
-}
+/*span.img_container.failed {*/
+/*    overflow: hidden;*/
+/*}*/
 
 progress.wp_media_indicator {
     /* Reset the default appearance */
@@ -120,6 +120,23 @@ progress.wp_media_indicator.failed::-webkit-progress-bar {
 
 progress.wp_media_indicator.failed::-webkit-progress-value {
     background-color:rgba(135,135,135,1.0);
+}
+
+span.img_container.failed::before {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    left:0%;
+    text-align: center;
+    color: white;
+    width:100%;
+    height:85px;
+    opacity:1;
+    z-index:10;
+    -webkit-user-select: none;
+    pointer-events: none;
+    content:"";
+    background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 124 124"><circle fill="none" stroke="#FFFFFF" stroke-width="4"  cx="62" cy="62" r="60"></circle><path d="M79.0637899,40.93125 C74.1838649,36.0375 67.4465291,33 59.9831144,33 C45.0562852,33 33,45.0825 33,60 C33,74.9175 45.0562852,87 59.9831144,87 C72.5628518,87 83.0994371,78.39375 86.0881801,66.75 L79.0637899,66.75 C76.2776735,74.61375 68.8142589,80.25 59.9831144,80.25 C48.7879925,80.25 39.7204503,71.188125 39.7204503,60 C39.7204503,48.811875 48.7879925,39.75 59.9831144,39.75 C65.5722326,39.75 70.587242,42.07875 74.2514071,45.740625 L63.3602251,56.625 L87,56.625 L87,33 L79.0637899,40.93125 L79.0637899,40.93125 Z" fill="#FFFFFF" ></path></svg>') no-repeat center top;
 }
 
 #separatorDiv {
